--- a/templates/index-sub.html
+++ b/templates/index-sub.html
@@ -7,30 +7,30 @@
 
   <title>Clouds</title>
 
-  <link rel="icon" type="image/x-icon" href="../icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\icons/favicon.ico">
 
-  <link rel="stylesheet" href="../templates/style-sub.css">
-  <link rel="prefetch" href="../media/day2.jpg">
-  <link rel="prefetch" href="../media/day1.jpg">
-  <link rel="prefetch" href="../media/day3.jpg">
-  <link rel="prefetch" href="../media/day4.jpg">
-  <link rel="prefetch" href="../media/day5.jpg">
-  <link rel="prefetch" href="../media/night1.jpg">
-  <link rel="prefetch" href="../media/night2.jpg">
-  <link rel="prefetch" href="../media/night3.jpg">
-  <link rel="prefetch" href="../media/night4.jpg">
-  <link rel="prefetch" href="../media/night5.jpg">
-  <link rel="prefetch" href="../media/rainy1.jpg">
-  <link rel="prefetch" href="../media/rainy2.jpg">
-  <link rel="prefetch" href="../media/rainy3.jpg">
-  <link rel="prefetch" href="../media/rainy4.jpg">
-  <link rel="prefetch" href="../media/rainy5.jpg">
-  <link rel="prefetch" href="../media/cloudy1.jpg">
-  <link rel="prefetch" href="../media/cloudy2.jpg">
-  <link rel="prefetch" href="../media/cloudy3.jpg">
-  <link rel="prefetch" href="../media/cloudy4.jpg">
-  <link rel="prefetch" href="../media/cloudy5.jpg">
-  <link rel="prefetch" href="../icons/loader.gif">
+  <!-- <link rel="stylesheet" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\templates/style-sub.css"> -->
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/day2.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/day1.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/day3.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/day4.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/day5.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/night1.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/night2.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/night3.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/night4.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/night5.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/rainy1.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/rainy2.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/rainy3.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/rainy4.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/rainy5.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/cloudy1.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/cloudy2.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/cloudy3.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/cloudy4.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\media/cloudy5.jpg">
+  <link rel="prefetch" href="D:\Cloudburst-Prediction-System-main\cloudburstpredict\icons/loader.gif">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -59,6 +59,471 @@
         height: 100%;
       }
     }
+    *, *::before, *::after
+{
+  box-sizing: border-box;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+  opacity: 100%;
+  /* transition: 0.25s; */
+}
+*{
+  background-color: aliceblue;
+}
+.mobile-navbar
+{
+	display: none;
+}
+
+body
+{
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+}
+
+#loader1, #loader2, #loader3
+{
+	width: 37.5px;
+	height: 37.5px;
+}
+
+.imgs-as-icons
+{
+  width: 50px;
+  height: 50px;
+}
+
+.navbar
+{
+  /* background: #212a51; */
+  background: rgba(0, 0, 0, 0.375);
+  text-align: right;
+  opacity: 100%;
+  transition: 0.3s;
+}
+
+/* START OF MOBILE STYLES */
+
+.mobile-navbar
+{
+	list-style-type: none;
+  /* background: rgba(0, 0, 0, 1.0); */
+  opacity: 100%;
+  transition: 0.3s;
+}
+
+.mobile-navbar li
+{
+	margin: 7.5px auto;
+	width: 87.5%;
+}
+
+.mobile-navbar li input
+{
+	height: 50px;
+	width: 100%;
+	background: #1d1d1f;
+	color: #fff;
+	text-align: center;
+	border: none;
+	border-radius: 50px;
+	outline: none;
+	font-size: 20px;
+}
+
+.mobile-navbar input::placeholder
+{
+	color: lightgrey;
+}
+
+/* END OF MOBILE STYLES */
+
+ul
+{
+  margin: 0;
+  padding: 5px;
+  transition: 0.3s;
+}
+
+.navbar li
+{
+  margin: 0 0;
+  padding: 5px;
+  display: inline-block;
+  transition: 0.3s;
+}
+
+.navbar li a
+{
+  font-size: 25px;
+  color: #fff;
+  padding: 5px 10px;
+  text-decoration: none;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.navbar .search-city
+{
+  width: 25vw;
+  height: 5.75vh;
+  font-size: 18.75px;
+}
+
+.search-city
+{
+  letter-spacing: 0.50px;
+  padding-left: 20px;
+  background: rgba(0, 0, 0, 0.50);
+  border: none;
+  color: #fff;
+  border-radius: 50px;
+  outline: none;
+}
+
+.navbar a:hover:not(.repo-link)
+{
+  background: #000;
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.location-name
+{
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+}
+
+.temperature-container
+{
+  text-align: center;
+  margin: auto;
+  font-size: 50px;
+}
+
+.temperature-icon
+{
+  margin-bottom: -15px;
+  padding: 0;
+}
+
+.temperature-value
+{
+  margin-top: -15px;
+  padding: 0;
+  color: #fff;
+}
+
+.weather-type
+{
+  font-weight: 400;
+  text-align: center;
+  color: #fff;
+}
+
+.additionals-first-row, .additionals-second-row
+{
+  display: flex;
+  justify-content: center;
+  font-size: 12.5px;
+  width: 100%;
+  text-align: center;
+  /* margin: 15px; */
+  padding: 10px;
+  flex: auto;
+  flex-wrap: wrap;
+}
+
+.additionals-first-row
+{
+  margin-bottom: 12.5px;
+}
+
+.additionals-second-row
+{
+  margin-top: 12.5px;
+}
+
+.data{
+  margin: auto;
+  margin-top: 10px;
+}
+
+.air-quality-additional, .real-feel-additional, .humidity-additional, .max-temperature-additional, .min-temperature-additional
+{
+  margin-left: 5px;
+  margin-right: 5px;
+  background: #fff;
+  border-radius: 50px;
+  padding: 2.5px 10px;
+}
+
+.wind-speed-additional, .wind-direction-additional, .visibility-additional, .pressure-additional, .sunrise-additional, .sunset-additional
+{
+  margin-left: 5px;
+  margin-right: 5px;
+  background: #fff;
+  border-radius: 50px;
+  padding: 2.5px 10px;
+}
+
+.separator
+{
+  width: 25%;
+  margin: auto;
+  height: 7.5px;
+  background: lightgrey;
+  border-radius: 60px;
+}
+
+.daily-forecast
+{
+  padding: 25px;
+  margin-top: -25px;
+  text-align: center;
+}
+
+.daily-forecast .daily-forecast-label
+{
+  color: #fff;
+}
+
+
+.daily-forecast-card
+{
+  display: inline-block;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0);
+  width: 125px;
+  height: 162.5px;
+  padding: 2.5px 10px;
+  margin-left: 2.5px;
+  margin-right: 2.5px;
+  color: #fff;
+}
+
+.daily-forecast-card .daily-forecast-logo
+{
+  font-size: 37.5px;
+  margin: -10px -10px;
+}
+
+.daily-forecast-card .daily-forecast-date
+{
+  font-size: 17.5px;
+  margin-top: 12.5px;
+  font-weight: 400;
+}
+
+.daily-forecast-card .daily-forecast-logo
+{
+  margin-top: -15px;
+  margin-bottom: 2.5px;
+}
+
+.daily-forecast-card .weather-type-daily-forecast
+{
+  font-weight: normal;
+  margin-top: 2.5px;
+}
+
+.max-daily-forecast
+{
+  font-weight: bold;
+  font-size: 25px;
+}
+
+@media (max-width: 300px)
+{
+	.navbar
+	{
+		display: none;
+	}
+
+	.mobile-navbar
+	{
+		display: block;
+
+	}
+
+ 
+
+/* 
+  @media (max-width: 300px)
+  {
+    .navbar
+    {
+      display: none;
+    }
+  
+    .mobile-navbar
+    {
+      display: block;
+  
+    }
+    .additionals-first-row, .additionals-second-row
+    {
+      font-size: 10px;
+      width: 100%;
+      text-align: center;
+      flex: auto;
+      flex-wrap: wrap;
+    }
+  
+} */
+
+	.additionals-first-row span, .additionals-second-row span
+	{
+		display: none;
+	}
+
+	.daily-forecast-card
+	{
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	.daily-forecast .daily-forecast-label
+	{
+		background: lightgrey;
+		color: #252525;
+		padding: 10px;
+		width: 75%;
+		border-radius: 50px;
+		margin: auto;
+	}
+	#weatherType
+	{
+		margin-top: 0;
+	}
+}
+
+footer {
+  /* margin-top: 350px; */
+  background-color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: 10 10 10;
+  padding: 10 10 10;
+  margin-left: 10px;
+}
+
+footer .col {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+footer .logo{
+  margin-bottom: 30px;
+}
+
+footer h4{
+  font-size: 14px;
+  padding-bottom: 20px;
+}
+footer p{
+  font-size: 13px;
+  margin: 0 0 8px 0;
+
+}
+footer a{
+  font-size: 13px;
+  text-decoration: none;
+  color:black;
+  margin-bottom: 10px;
+}
+.payment img{
+  width: 30%;
+  height: 30%;
+}
+
+footer .follow{
+  margin-top: 20px;
+}
+footer .follow i{
+  color: #d9248e;
+  padding-right: 4px;
+  cursor: pointer;
+}
+footer .follow i:hover{
+  color: #fafafb;
+}
+footer a :hover{
+  color:#088178;
+}
+.copyright{
+  text-align: center;
+  color: #1a1a1a;
+}
+h2{
+  color: blue;
+}
+
+/* Style inputs, select elements and t#f9f5f5extareas */
+input[type=text], select, textarea{
+  width: 100%;
+  padding: 12px;
+  border: 1px solid ;
+  border-radius: 4px;
+  box-sizing: border-box;
+  resize: vertical;
+}
+
+/* Style the label to display next to the inputs */
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+/* Style the submit button */
+input[type=submit] {
+  background-color: #099260;
+  color: #f9f5f5;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+/* Style the container */
+.container {
+  border-radius: 8px;
+  background-color: #f9f5f5;
+  padding: 30px;
+}
+
+/* Floating column for labels: 25% width */
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+/* Floating column for inputs: 75% width */
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
   </style>
 </head>
 
@@ -79,7 +544,7 @@
   <!-- <h1 class="location-name" id="locationName">Search City...</h1>
 
   <div class="temperature-container">
-    <div class="temperature-icon"><img class="imgs-as-icons" src="../icons/sunny.png"></div>
+    <div class="temperature-icon"><img class="imgs-as-icons" src="icons/sunny.png"></div>
     <div class="temperature-value" id="temperatureValue"></div>
   </div>
 
@@ -191,20 +656,29 @@
   <!-- <div class="separator"></div> -->
 
 <!-- 
-  <script src="../scripts/script.js"></script>
-  <script src="../scripts/mobile.js"></script>
+  <script src="scripts/script.js"></script>
+  <script src="scripts/mobile.js"></script>
   <br><br><br><br><br> --> -->
 </body>
 <div class="container">
-  <form action="action_page.php">
+  <form action="/" method="post">
     <div class="row">
       <div class="col-25">
-        <label for="fname">First Name</label>
+        <label for="fname">Pin code</label>
       </div>
       <div class="col-75">
-        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        <input type="text" id="fname" name="firstname" placeholder="700 0..">
       </div>
     </div>
+        {% if invalid_input %}
+            <p style="color: red;">Invalid city name. Please try again.</p>
+        {% endif %}
+        {% if city %}
+            <p>City: {{ city }}</p> <!-- Display city name if it exists -->
+        {% endif %}
+        {% if prediction is not none %}
+            <p class="result">Chances of a CloudBurst in {{ city }}: {{ prediction }} %</p>
+        {% endif %}
     <!-- <div class="row">
       <div class="col-25">
         <label for="lname">Last Name</label>
@@ -265,7 +739,7 @@
 <!-- <script>
   var randomBackground = backgroundsList[Math.floor(Math.random() * backgroundsList.length)];
 
-  document.body.style.background = "linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) , url('../media/" + randomBackground + "')";
+  document.body.style.background = "linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)) , url('media/" + randomBackground + "')";
 
 </script> -->
 
